# doctors_appointment_app

./: .env-example  .env_aws_example  .env_email_example  .gitignore  Makefile  Readme.md  dump.rdb  pyproject.toml
docker_compose/: app.yaml  celery.yaml  storages.yaml
src/: config.py  main.py
src/admin/: appointment.py  auth_admin.py  doctor_schedule.py  medical_card.py  payment.py  services.py  users.py  visits.py
src/api/auth/: router.py
src/api/doctors/: dependencies.py  router.py
src/api/patients/: dependencies.py  router.py
src/api/report/: dependencies.py  router.py
src/api/search/: dependencies.py  router.py
src/db/: connect.py
src/exceptions/: base.py
src/migrations/: env.py
src/models/: analyzes.py  appointment.py  diagnosis.py  doctor_schedule.py  medical_card.py  payment.py  procedure.py  services.py  user.py  visits.py  wallet.py
src/repos/: appointment.py  base.py  doctor_schedule.py  medical_card.py  payment.py  services.py  sqlalchemy.py  user.py  wallet.py
src/schemas/: analyze.py  appointment.py  auth.py  auth_schema.py  medical_card.py  payment.py  services.py  wallet.py
src/services/: analyze_service.py  auth_service.py  create_appointment_service.py  diagnose_service.py  medical_card_service.py  payment_service.py  procedure_service.py  report_services.py  search.py  service_service.py  visit_service.py  wallet_service.py
src/tasks/: celery.py  send_email.py  tasks_token.py  token.py
src/templates/: dashboard.html
src/utils/: aws_connect.py  config_aws.py  config_email.py  generate_qr_code.py  pagination.py
(+21 files in other folders)
